<resources>
    <string name="app_name">StudyBear</string>
    <string name="company_logo">company_logo</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_study_bear">Welcome to Study Bear</string>
    <string name="email_note">Please avoid fake Email id\'s</string>
    <string name="firebase_logo">Firebase Logo</string>
    <string name="google_logo">Google Logo</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="company_name">Studybear</string>
    <string name="demo_name">Good XYZ</string>
    <string name="coding_events">Coding events</string>
    <string name="news">News</string>
    <string name="circular">Circulars</string>
    <string name="memes">Have some fun along with studies, presenting memes from Redit! </string>
    <string name="leaderboard">Leaderboard</string>
    <string name="notes">Notes</string>
    <string name="discuss">Discuss</string>
    <string name="report_bugs">Feedback</string>
    <string name="about_us">About us</string>
    <string name="company_name_caps">STUDY BEAR</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_our_app">Rate us</string>
    <string name="events">Events</string>
    <string name="more">More</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="web_client_id">911830907608-e5ruetagib0i5roee6iabb9k0rikvura.apps.googleusercontent.com</string>
    <string name="hold_on">Hold on</string>
    <string name="semester">Your semester</string>
    <string name="point">Your points</string>
    <string name="here_s_what_you_have_achieved">Here\'s what you have achieved.</string>
    <string name="learn_more_about_studybear">Learn more about Studybear.</string>
    <string name="help_us_in_making_studybear_bug_free">Help us in making Studybear bug free.</string>
    <string name="feedback_report_bug">Feedback</string>
    <string name="log_out">Log out</string>
    <string name="get_back_soon">Get back soon.</string>
    <string name="explore_notes">EXPLORE NOTES</string>
    <string name="notes_description">One stop solution for all the notes</string>
    <string name="experience_our_features">Experience our features</string>
    <string name="notes_explanation">Daily classroom notes at your fingertips, also upload and earn rewards!</string>
    <string name="discuss_description">Discuss with your peers</string>
    <string name="discuss_explanation">Share your knowledge, ideas, doubts and have unlimited fun!</string>
    <string name="explore_discuss">EXPLORE DISCUSS</string>
    <string name="events_description">Get updated about the coding events</string>
    <string name="events_explanation">Give contests on Codeforces and more, become a master!</string>
    <string name="explore_coding_events">EXPLORE EVENTS</string>
    <string name="news_description">Get updated about all the latest technology</string>
    <string name="news_explanation">Read news related to technology, become industry ready!</string>
    <string name="explore_news">EXPLORE NEWS</string>
    <string name="teachers_description">Connect to your teachers, get doubts cleared</string>
    <string name="teachers_explanation">All the ways to stay connected to your teacher at your fingertips!</string>
    <string name="explore_teachers">EXPLORE TEACHERS</string>
    <string name="crafted_with">Made with</string>
    <string name="by_kamath_and_hegde">by Kamath &amp; Hegde</string>
    <string name="wassup_buddy">Wassup buddy?</string>
    <string name="technology_news">Technology News</string>
    <string name="read_more">READ MORE</string>
    <string name="we_are_sorry_please_try_again">We are sorry, Please refresh..</string>
    <string name="know_more">KNOW MORE</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="to">To</string>
    <string name="additional_information">Additional Information</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_razor">Phone number</string>
    <string name="choose_your_semester">Choose your Semester</string>
    <string name="procced_to_payment">Proceed to Studybear</string>
    <string name="note_we_do_not_sell_your_data">Note: Studybear do not sell your data</string>
    <string name="_10_digit_phone_number">10 digit phone number</string>
    <string name="choose_a_unit">Choose a unit</string>
    <string name="proceed">Proceed</string>
    <string name="choose_a_topic">Choose a Topic</string>
    <string name="android_web">Android | Web</string>
    <string name="team_members">Team members</string>
    <string name="studybear">Studybear</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="credits">Credits</string>
    <string name="refund_policy">Refund policy</string>
    <string name="privileged_access"><u>Privacy policy</u></string>
    <string name="about_us_description">Our goal at Studybear is to alter the route that one takes to become an engineer(IT). We want to offer a place where people may upload and read notes. We also give students access to daily tech news, coding event announcements, memes, and more! . By expanding the Studybear family, we hope to make life easier for students pursuing engineering(CSE/ISE/IT/AI/DS).\n\nWe would like to express our gratitude to Dr. B M Sagar (Professor and HOD of ISE, R V College of Engineering) for his constant support and direction.</string>
    <string name="important_message">Students are requested to login using RVCE account in * GOOGLE SIGN IN * only!</string>
    <string name="contact_us_website">Contact us</string>
    <string name="meme">Bored?, taste some memes</string>
    <string name="memes_name">Memes</string>
    <string name="explore_memes">EXPLORE MEMES</string>
    <string name="channel_name">Test</string>
    <string name="channel_description">Test Notification</string>


</resources>