<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grpBottomFeatures"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/bottom_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes" />
        <item
            android:id="@+id/bottom_discuss"
            android:icon="@drawable/ic_discuss"
            android:title="@string/discuss" />
        <item
            android:id="@+id/bottom_account"
            android:icon="@drawable/ic_account"
            android:title="@string/account" />
    </group>

</menu>