<?xml version="1.0" encoding="utf-8"?>

<!--
scrollView
    linear layout
        widgets
        relative layout
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/company_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_40sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_to_study_bear"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_GoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_140sdp"
            android:layout_marginEnd="@dimen/_20sdp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/email_note"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_toEndOf="@id/google_logo"
                android:contentDescription="@string/firebase_logo"
                android:src="@drawable/firebase_logo" />


            <ImageView
                android:id="@+id/google_logo"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:contentDescription="@string/google_logo"
                android:src="@drawable/google_logo" />


        </RelativeLayout>


        <TextView
            android:id="@+id/txt_PrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            />


    </LinearLayout>


</ScrollView>