<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/parentRazor"
    tools:context=".activity.activity.RazorPayDataActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/additional_information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/txtRazorName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/card_border"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="1dp"
                        android:background="#ffffff"
                        android:fontFamily="sans-serif-light"
                        android:text="Name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"

                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/txtRazorEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/card_border"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="2dp"
                        android:background="#ffffff"
                        android:fontFamily="sans-serif-light"
                        android:text="Email id"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal"

                        />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/edtRazorPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/card_border"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:hint="@string/_10_digit_phone_number"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="2dp"
                        android:background="#ffffff"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/phone_number_razor"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal" />

                </RelativeLayout>


                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/spinnerRazor"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/card_border"
                    android:fontFamily="@font/roboto"
                    android:gravity="start"
                    android:padding="10dp"
                    android:textColor="@color/text_grey"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:spinner_arrow_drawable="@drawable/ic_arrow"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_show="true"
                    android:hint="@string/choose_your_semester"
                    app:spinner_arrow_tint="@color/black"
                    app:spinner_divider_color="@color/text_grey"
                    app:spinner_divider_show="true"
                    app:spinner_item_array="@array/semesters"
                    app:spinner_item_height="@dimen/_50sdp"
                    app:spinner_popup_animation="dropdown"
                    app:spinner_popup_background="@color/white"
                    app:spinner_popup_elevation="1dp" />

                <Button
                    android:id="@+id/btnRazorPay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/procced_to_payment"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textStyle="bold"
                    android:background="@drawable/card_border"
                    android:backgroundTint="#0192EC"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/note_we_do_not_sell_your_data"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />
            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/company_logo"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_marginTop="@dimen/_5sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baloo_bhai"
            android:text="Studybear access plan at just,"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baloo_bhai"
            android:text="₹30 / month"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            />


        <com.google.android.gms.ads.AdView
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/adViewPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="LARGE_BANNER"
            app:adUnitId="ca-app-pub-5634416739025689/3831059836"
            android:layout_gravity="center"/>



    </LinearLayout>






</ScrollView>